--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,12 @@
             <artifactId>mockito-core</artifactId>
             <version>2.9.0</version>
         </dependency>
-
+		<dependency>
+		  <groupId>org.codehaus.mojo</groupId>
+		  <artifactId>findbugs-maven-plugin</artifactId>
+		  <version>3.0.6-SNAPSHOT</version>
+		  <type>maven-plugin</type>
+		</dependency>
       	<dependency>
   		<groupId>cobertura</groupId>
   		<artifactId>cobertura</artifactId>
